# tidal

./: .env.example  .gitignore  AGENTS.md  API.md  AUTOMATE.md  CLI.md  CONFIG.md  DRAFT_SPEC.md  EXTERNAL_PLAN.md  FEATURES.md  FEATURE_LIST.md  FILE.md  HOSTING.md  IS_KILLED.md  KICK_PLAN.md  LP_PLAN.md  NEW_AUCTION.md  PLAN.md  README.md  REFACTOR.md  REPORT.md  ROLES.md  RUN.md  SIMPLIFY.md  SIZING.md  SLIPPAGE.md  alembic.ini  auction_pricing_policy.yaml  config.yaml  mkdocs.yml  pyproject.toml  strategy_auction_map.json
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_phase1_initial.py  0002_add_vaults_table.py  0003_add_token_prices_latest.py  0004_move_price_fields_to_tokens_drop_token_prices_table.py  (+8 more)
config/: .env.example  server.yaml
contracts/: README.md
docs/: architecture.md  cli-client-init.md  cli-client-kick.md  cli-server-api.md  cli-server-db.md  cli-server-scan.md  config.md  index.md  install.md  kick-selection.md  local-dev.md  operator-guide.md  pricing.md  server-ops.md
factory_dashboard/: cli.py  config.py  logging.py  normalizers.py  runtime.py  types.py
scripts/: sweep_and_settle.py
test_area/: curve_price_loop.py
tidal/: auction_cli.py  auction_price_units.py  auction_settlement.py  auth_cli.py  cli.py  cli_context.py  cli_options.py  cli_renderers.py  cli_support.py  config.py  kick_cli.py  logs_cli.py  operator_auction_cli.py  operator_cli_support.py  operator_kick_cli.py  operator_logs_cli.py  paths.py  runtime.py  scan_cli.py  security.py  server_cli.py
ui/: .env.development  README.md  STYLEGUIDE.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
(+161 files in other folders)
